# Bag_of_Visual_Words

./: CMakeLists.txt  README.md
include/: bag_of_visual_words.h  bow_dictionary.hpp  compute_sifts.hpp  convert_dataset.hpp  html_writer.hpp  image_browser.hpp  kmeans.hpp  kmeans_utils.hpp  place_recognizer.hpp  serialize.hpp
src/: bow_dictionary.cpp  compute_sifts.cpp  convert_dataset.cpp  html_writer.cpp  image_browser.cpp  kmeans.cpp  kmeans_utils.cpp  main.cpp  place_recognizer.cpp  serialize.cpp
